fix permission bug in Android M and other bugs

--- a/app/src/main/res/anim/activity_up_down_anim.xml
+++ b/app/src/main/res/anim/activity_up_down_anim.xml
@@ -4,5 +4,10 @@
     <translate
         android:duration="@android:integer/config_shortAnimTime"
         android:fromYDelta="0"
-        android:toYDelta="100%p" />
+        android:toYDelta="20%p" />
+    <alpha
+        android:duration="@android:integer/config_shortAnimTime"
+        android:fromAlpha="1"
+        android:toAlpha="0"
+        />
 </set>
