--- a/app/src/main/res/xml/prefs.xml
+++ b/app/src/main/res/xml/prefs.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
     <com.jenzz.materialpreference.PreferenceCategory android:title="@string/general_settings">
-        <com.jenzz.materialpreference.SwitchPreference
+        <com.jenzz.materialpreference.CheckBoxPreference
             android:key="@string/right_hand_mode_key"
             android:title="@string/right_hand_mode"
             android:summary="@string/right_hand_mode_summary"/>
