--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,36 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="red">#FF5722</color>
-    <color name="dark_red">#F4511E</color>
-    <color name="accent_red">#FF6347</color>
+    <color name="red">#F44336</color>
+    <color name="dark_red">#F44336</color>
+    <color name="accent_red">#F44336</color>
 
     <color name="brown">#795548</color>
-    <color name="dark_brown">#5D4037</color>
+    <color name="dark_brown">#795548</color>
     <color name="accent_brown">#795548</color>
 
 
     <color name="blue">#2196F3</color>
-    <color name="dark_blue">#1976D2</color>
+    <color name="dark_blue">#2196F3</color>
     <color name="accent_blue">#448AFF</color>
 
     <color name="blue_grey">#607D8B</color>
-    <color name="dark_blue_grey">#455A64</color>
+    <color name="dark_blue_grey">#607D8B</color>
     <color name="accent_blue_grey">#607D8B</color>
 
     <color name="yellow">#FF9800</color>
-    <color name="dark_yellow">#F57C00</color>
+    <color name="dark_yellow">#FF9800</color>
     <color name="accent_yellow">#FF9800</color>
 
     <color name="deep_purple">#673AB7</color>
-    <color name="dark_deep_purple">#512DA8</color>
-    <color name="accent_deep_purple">#7C4DFF</color>
+    <color name="dark_deep_purple">#673AB7</color>
+    <color name="accent_deep_purple">#673AB7</color>
 
     <color name="pink">#E91E63</color>
-    <color name="dark_pink">#C2185B</color>
-    <color name="accent_pink">#FF4081</color>
+    <color name="dark_pink">#E91E63</color>
+    <color name="accent_pink">#E91E63</color>
 
     <color name="green">#4CAF50</color>
-    <color name="dark_green">#388E3C</color>
+    <color name="dark_green">#4CAF50</color>
     <color name="accent_green">#4CAF50</color>
 
     <color name="text_color_primary">#212121</color>
@@ -43,6 +43,7 @@
     <color name="light_grey_1">#FFEEEEEE</color>
 
     <color name="drawer_scrim_color">#88EEEEEE</color>
-    <color name="action_bar_title_color">@android:color/white</color>
+    <color name="toolbar_title_color">@android:color/white</color>
+    <color name="toolbar_bg_color">@android:color/black</color>
     <color name="window_background">@android:color/white</color>
 </resources>
